--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="https://img.icons8.com/?size=100&id=36141&format=png&color=000000"
         type="image/x-icon">
-    <title>Bom Dêmáx - LinTree</title>
+    <title>Bom Dêmáx - LinkTree</title>
 </head>
 
 <body>
